移除sso多余代码
